--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,9 @@
 <div class="comment-container d-flex" id="comment-<%= comment.id %>">
-  <div class="mr-2"><%= image_tag "logo.png", class: "avatar" %></div>
+  <% if comment.user.avatar.attached? %>
+    <div class="mr-2"><%= cl_image_tag comment.user.avatar.key, class: "avatar" %></div>
+  <% else %>
+    <div class="mr-2"><%= image_tag "logo.png", class: "avatar" %></div>
+  <% end %>
   <div>
     <div class="user-info flex-column">
         <%= link_to comment.user.full_name, user_path(comment.user), class: "user-info-name" %>
