--- a/app/assets/stylesheets/components/_card-case.scss
+++ b/app/assets/stylesheets/components/_card-case.scss
@@ -18,6 +18,9 @@ ul{
   border-radius: 16px;
   position: relative;
   border-left: 25px solid #3734AA;
+  border-right: solid 1px rgb(240, 240, 240);
+  border-top: solid 1px rgb(240, 240, 240);
+  border-bottom: solid 1px rgb(240, 240, 240);
   box-shadow: 1px 2px 6px rgba(0,0,0,0.2);
   background-color: white;
   text-decoration: none;
