--- a/app/assets/stylesheets/components/_comment.scss
+++ b/app/assets/stylesheets/components/_comment.scss
@@ -1,6 +1,7 @@
 // project show page
 .comment-container {
   border-radius: 16px;
+  border: solid 1px rgb(240, 240, 240);
   background: $m-grey;
   padding: 14px 20px;
   margin-bottom: 16px;
