avatar added for case show page

--- a/app/assets/stylesheets/components/_comment.scss
+++ b/app/assets/stylesheets/components/_comment.scss
@@ -28,3 +28,10 @@
     margin-left: auto;
   }
 }
+// user specialization
+.user-info-detail {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+}
+//
