--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,9 +6,9 @@
   <% end %>
   <div>
     <div class="user-info flex-column">
-        <%= link_to comment.user.full_name, user_path(comment.user), class: "user-info-name" %>
+        <%= link_to comment.user.full_name, user_path(comment.user), class: "doctor-name" %>
         <div>
-          <span class="user-info-detail"><%= comment.user.specialization %></span>
+          <span class="user-info-detail mr-2"><%= comment.user.specialization %></span>
           <small><%= comment.created_at.strftime("%a %b %e at %l:%M%p") %></small>
         </div>
     </div>
