--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -17,7 +17,7 @@
           <div class="col-md-3 d-flex justify-content-between">
             <% if current_user == @case.user %>
                 <div><%= link_to "Edit", edit_case_path(@case), class: "purple-button" %></div>
-                <div><%= link_to "Delete", case_path(@case), method: :delete, data: { confirm: "Are you sure?"}, class: "purple-button" %></div>
+                <div class="ml-2"><%= link_to "Delete", case_path(@case), method: :delete, data: { confirm: "Are you sure?"}, class: "purple-button" %></div>
             <% end %>
           </div>
         </div>
