--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -13,8 +13,8 @@
   border: white 1px solid;
 }
 .avatar-square {
-  width: 40px;
-  border-radius: 0px;
+  width: 120px;
+  border-radius: 10px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  border: none;
 }
