Added icons below banner on case index page

--- a/app/assets/stylesheets/pages/_case-index.scss
+++ b/app/assets/stylesheets/pages/_case-index.scss
@@ -1,3 +1,16 @@
 #case-cards-section{
   background-color: white;
 }
+
+.index-icons{
+  img{
+    width: 80px;
+    margin-bottom: 10px;
+  }
+  p{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-weight: 100;
+    color: white;
+    }
+}
