--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,7 @@
       <div class="d-flex flex-grow-1 top-right-bloc">
         <div class="px-5 col-md-4">
           <h2>SEEK FOR HELP </h2>
-          <p>Having patients with rare diseases?</p>
+          <p>Having patients with rare and mysterious diseases?</p>
         </div>
         <div class="px-5 col-md-4">
           <h2>BUILD A CASE</h2>
