--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,30 +2,49 @@
   <div class="container">
     <div>
       <div class="small-banner-text col-md-8">
-        <h2>PROJECT</h2>
       </div>
     </div>
   </div>
 </div>
 
-<div class ="container">
-  <div class="d-flex align-items-center justify-content-between my-3">
-    <h1>Projects</h1>
-    <div>
-      <%= form_tag projects_path, method: :get, class: "d-flex justify-content-center my-3" do %>
-        <%= button_tag :submit, class: "btn btn-search-index" do %>
-          <i class="fas fa-search"></i>
-        <% end %>
-        <%= text_field_tag :query,
-          params[:query],
-          class: "form-control search-bar-index",
-          placeholder: ""
-        %>
-      <% end %>
+<div class="container-auto">
+  <div style="background-color: #071532" class="index-icons d-flex justify-content-center align-items-start py-3">
+    <div class="col-md-3 index-icons d-flex flex-column align-items-center">
+      <img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615410924/index-search-icon_pdizpl.png" alt="">
+      <div>
+        <p>Look for a case and help doctors <br>to find solutions for their patients</p>
+      </div>
     </div>
-    <%= link_to "+ project", new_project_path, class: "btn-s-blue mb-2" %>
+
+    <div class="col-md-3 index-icons d-flex flex-column align-items-center">
+      <img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615410926/index-project-icon_u46wzp.png" alt="">
+      <div>
+        <div class="add-button"><%= link_to "new", new_project_path, class: "my-2" %></div>
+        <p>Link your case to a project to get <br>connected with doctors</p>
+      </div>
+    </div>
+
+    <div class="col-md-3 index-icons d-flex flex-column align-items-center">
+      <div class="d-flex">
+        <img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615410955/index-case-icon_zciaqa.png" alt="">
+      </div>
+      <div>
+        <p>Create your own case in order to<br> seek a second opinion</p>
+      </div>
+    </div>
+
+     <div class="col-md-3 index-icons d-flex flex-column align-items-center">
+      <img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615410926/index-project-icon_u46wzp.png" alt="">
+      <div>
+        <p>Link your case to a project to get <br>connected with doctors</p>
+      </div>
+    </div>
+
   </div>
-  <ul id ="project-container">
+</div>
+
+<div class ="container pt-5">
+  <ul class="overflow mb-0" id ="project-container">
     <% @projects.each do |project| %>
       <li >
         <div class="card-project">
@@ -48,3 +67,5 @@
     <% end %>
   </ul>
 </div>
+
+ <div class="light-blue-rectangle"></div>
