Added titles in banners

--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <div>
       <div class="small-banner-text col-md-8">
+        <h1 class="banner-title">Doctor a designation where passion and profession co-exist</h1>
       </div>
     </div>
   </div>
@@ -38,7 +39,7 @@
 
   <div class="container pt-5">
     <div>
-      <ul class="overflow cards-container pb-5 mb-0">
+      <ul class="overflow cards-container pb-5 mb-3">
         <% @cases.each do |c| %>
           <li class="card-case">
             <div class="card-doctor-email">
