--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <div>
       <div class="small-banner-text col-md-8">
+        <h1 class="banner-title">Care and dedication is the driving force behind our work</h1>
       </div>
     </div>
   </div>
@@ -44,7 +45,7 @@
 </div>
 
 <div class ="container pt-5">
-  <ul class="overflow mb-0" id ="project-container">
+  <ul class="overflow mb-3" id ="project-container">
     <% @projects.each do |project| %>
       <li >
         <div class="card-project">
