Redirect link case to the case section in the project show page.

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -62,7 +62,7 @@
 <div class="project-body pt-3">
   <div class="container py-3">
     <div class="display-project-detail">
-      <div class="case">
+      <div id="cases" class="case">
         <div class="d-flex align-items-center">
           <h3 class="mb-0 pr-5"><strong>Case</strong></h3>
           <%= form_tag cases_path, method: :get, class: "d-flex justify-content-center" do %>
