--- a/app/assets/stylesheets/components/_search-bar.scss
+++ b/app/assets/stylesheets/components/_search-bar.scss
@@ -18,6 +18,18 @@
   opacity: 85%;
   box-shadow: 0px 4px 4px rgba(0,0,0,0.2);
   font-size: 15px;
+  // background-image:
+  // linear-gradient(45deg, transparent 50%, red 60%),
+  // linear-gradient(135deg, red 40%, transparent 50%) !important;
+  // background-position:
+  // calc(100% - 30px) 14px,
+  // calc(100% - 20px) 14px, 100% 0;
+  // background-size:
+  //   10px 10px,
+  //   10px 10px;
+  // background-repeat: no-repeat;
+  // -webkit-appearance: none;
+  // -moz-appearance: none;
 }
 //
 
