Added icons and descriptions below banner in both cases and projects index page

--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <div>
       <div class="small-banner-text col-md-8">
+        <h2>CASES</h2>
         <h1 class="banner-title">Doctor a designation where passion and profession co-exist</h1>
       </div>
     </div>
@@ -13,7 +14,7 @@
     <div class="col-md-3 index-icons d-flex flex-column align-items-center">
       <img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615410924/index-search-icon_pdizpl.png" alt="">
       <div>
-        <p>Look for a case and help doctors <br>to find solutions for their patients</p>
+        <p>Find a case which you can <br>bring your expertise to</p>
       </div>
     </div>
 
@@ -23,7 +24,7 @@
       </div>
         <div class="add-button"><%= link_to "new", new_case_path, class: "my-2" %></div>
       <div>
-        <p>Create your own case in order to<br> seek a second opinion</p>
+        <p>Create your own case and seek <br>for a second opinion</p>
       </div>
     </div>
 
