--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <div>
       <div class="small-banner-text col-md-8">
+        <h2>PROJECTS</h2>
         <h1 class="banner-title">Care and dedication is the driving force behind our work</h1>
       </div>
     </div>
@@ -13,7 +14,7 @@
     <div class="col-md-3 index-icons d-flex flex-column align-items-center">
       <img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615410924/index-search-icon_pdizpl.png" alt="">
       <div>
-        <p>Look for a case and help doctors <br>to find solutions for their patients</p>
+        <p>Find a project which you can <br>bring your expertise to</p>
       </div>
     </div>
 
@@ -21,23 +22,23 @@
       <img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615410926/index-project-icon_u46wzp.png" alt="">
       <div>
         <div class="add-button"><%= link_to "new", new_project_path, class: "my-2" %></div>
-        <p>Link your case to a project to get <br>connected with doctors</p>
+        <p>Create your own project so doctors <br>can add similar cases into it </p>
       </div>
     </div>
 
     <div class="col-md-3 index-icons d-flex flex-column align-items-center">
       <div class="d-flex">
-        <img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615410955/index-case-icon_zciaqa.png" alt="">
+        <img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615410945/index-collaborator-icon_xkdehh.png" alt="">
       </div>
       <div>
-        <p>Create your own case in order to<br> seek a second opinion</p>
+        <p>Become a collaborator and join <br>forces to find solutions together</p>
       </div>
     </div>
 
      <div class="col-md-3 index-icons d-flex flex-column align-items-center">
-      <img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615410926/index-project-icon_u46wzp.png" alt="">
+      <img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615410931/index-comment-icon_v2nspi.png" alt="">
       <div>
-        <p>Link your case to a project to get <br>connected with doctors</p>
+        <p>Share your professional opinion <br>with your collaborators</p>
       </div>
     </div>
 
