--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,7 @@
                            url('https://res.cloudinary.com/dpt0tj9je/image/upload/v1615221923/pexels-oles-kanebckuu-127873_1_lzg0mx.jpg')">
   <div class="container">
     <div class="small-banner-text col-md-8">
-      <h2>Project</h2>
+      <h2>PROJECT</h2>
       <h1><%= @project.name %></h1>
     </div>
   </div>
