Added real symptoms description

--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -181,14 +181,14 @@
       <div class="row d-flex justify-content-center">
         <div class="col-md-8 d-flex">
           <div class="col-md-6 mb-5">
-            <h3>Sed ut perspiciatis</h3>
-            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-            sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+            <h3>Joint pain</h3>
+            <p>The patient has joint pain with swelling affecting her whole body. She also has joint pain
+            but without swelling. She has constant muscle pain and stiffness that affect her motricity.</p>
           </div>
           <div class="col-md-6  mb-5">
-            <h3>Sed ut perspiciatis</h3>
-            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-            sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+            <h3>Crisis with fever and chest pain</h3>
+            <p>The patient has several crisis with a fever. Salmon-pink rashes on the upper body and a severe chest pain
+             causing a loss of consciousness.</p>
           </div>
         </div>
       </div>
@@ -196,14 +196,12 @@
       <div class="row d-flex justify-content-center">
         <div class="col-md-8 d-flex">
           <div class="col-md-6">
-            <h3>Sed ut perspiciatis</h3>
-            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-            sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+            <h3>Fatigue and insomnia</h3>
+            <p>The patient has extreme fatigue. Her pain wakes her up multiple times a night.</p>
           </div>
           <div class="col-md-6">
-            <h3>Sed ut perspiciatis</h3>
-            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-            sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+            <h3>Neurological symptoms</h3>
+            <p>The patient has a weakness of muscle strenght, tingling, muscle rigidity and burning feeling.</p>
           </div>
         </div>
       </div>
