--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,19 +3,19 @@
   <div class="d-flex justify-content-between">
     <div id="footer-logo" class="d-flex w-50 justify-content-center align-items-start">
       <%= image_tag "bloom-logo.png" %>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+<!--       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p> -->
     </div>
 
     <div class="d-flex w-50 justify-content-around">
       <div>
         <p class="text-blue">Services</p>
-        <p>Email Marketing</p>
+        <p>Benefits</p>
         <p>Campaigns</p>
       </div>
       <div>
         <p class="text-blue">About</p>
         <p>Our Story</p>
-        <p>Benefits</p>
+        <p>Our Mission</p>
       </div>
       <div>
         <p class="text-blue">Follow Us</p>
@@ -29,7 +29,7 @@
   </div>
 
   <div class="footer-bottom text-center mt-5">
-    <p>Copyright © 2020. Logolpsum. All rights reserved.</p>
+<!--     <p>Copyright © 2020. Logolpsum. All rights reserved.</p> -->
   </div>
 
 </div>
