Added transition on project and patient cards

--- a/app/assets/stylesheets/components/_card-project.scss
+++ b/app/assets/stylesheets/components/_card-project.scss
@@ -32,6 +32,7 @@ ul{
     &:hover{
       background-color: #3734AA;
       border-left: 25px solid #01E1F0;
+      transition: background-color 500ms;
         p{
           color: white;
         }
