--- a/app/views/cases/edit.html.erb
+++ b/app/views/cases/edit.html.erb
@@ -1,22 +1,34 @@
 <div class="container">
   <div class="my-5 d-flex justify-content-center">
-    <div class="form col">
+    <div class="form col" style="max-width: unset;">
       <div class="d-flex align-items-end mb-3">
         <div><img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615306185/case-icon_jh1vbt.png" alt="" style="width: 55px"></div>
           <div class="ml-3">
             <h2 class="mb-0">Edit Case: <%= @case.title %></h2>
           </div>
         </div>
+        <div class="row">
+          <!-- <div class=""> -->
+            <%= simple_form_for(@case) do |f| %>
 
-        <div>
-          <%= simple_form_for(@case) do |f| %>
-            <%= f.input :title %>
-            <%= f.input :description, as: :text %>
-            <%= f.association :patient, label: "Choose from my patient list",
-                              collection: @names,
-                              id: "link-exit-patient" %>
-            <%= f.button :submit, class: "btn-s-blue mb-5" %>
-          <% end %>
+              <div>
+
+                <%= f.input :title %>
+                <%= f.input :description, as: :text, input_html: {rows: 12} %>
+              </div>
+              <div class="col">
+                <h2 id="medical-report-anchor" class="title mb-5">Medical Report</h2>
+                  <%= f.simple_fields_for(:patient) do |fp| %>
+                    <%= fp.input :medications, as: :file, input_html: { multiple: true } %>
+                    <%= fp.input :treatments, as: :file, input_html: { multiple: true } %>
+                    <%= fp.input :surgeries, as: :file, input_html: { multiple: true } %>
+                    <%= fp.input :lab_tests, as: :file, input_html: { multiple: true } %>
+                    <%= fp.input :genetic_results, as: :file, input_html: { multiple: true } %>
+                    <%= fp.input :allergies, as: :file, input_html: { multiple: true } %>
+                  <% end %>
+              </div>
+              <%= f.button :submit, class: "btn-s-blue mb-5" %>
+            <% end %>
         </div>
 
         <div>
