edit-form-case is done

--- a/app/assets/stylesheets/components/_create-case-form.scss
+++ b/app/assets/stylesheets/components/_create-case-form.scss
@@ -40,3 +40,19 @@
 }
 
 
+.form-wrapper {
+  display: flex;
+  width: 100%;
+}
+
+.medical-attach {
+  padding-left: 40px;
+}
+
+.sub-title {
+  font-weight: bold;
+}
+
+
+
+
