--- a/app/views/cases/edit.html.erb
+++ b/app/views/cases/edit.html.erb
@@ -4,39 +4,38 @@
       <div class="d-flex align-items-end mb-3">
         <div><img src="https://res.cloudinary.com/dpt0tj9je/image/upload/v1615306185/case-icon_jh1vbt.png" alt="" style="width: 55px"></div>
           <div class="ml-3">
-            <h2 class="mb-0">Edit Case: <%= @case.title %></h2>
+            <h2 class="sub-title mb-0">Edit Case <%= @case.title %></h2>
           </div>
         </div>
-        <div class="row">
-          <!-- <div class=""> -->
+
             <%= simple_form_for(@case) do |f| %>
+              <div class="form-wrapper">
+                <div class='w-50'>
 
-              <div>
-
-                <%= f.input :title %>
-                <%= f.input :description, as: :text, input_html: {rows: 12} %>
-              </div>
-              <div class="col">
-                <h2 id="medical-report-anchor" class="title mb-5">Medical Report</h2>
-                  <%= f.simple_fields_for(:patient) do |fp| %>
-                    <%= fp.input :medications, as: :file, input_html: { multiple: true } %>
-                    <%= fp.input :treatments, as: :file, input_html: { multiple: true } %>
-                    <%= fp.input :surgeries, as: :file, input_html: { multiple: true } %>
-                    <%= fp.input :lab_tests, as: :file, input_html: { multiple: true } %>
-                    <%= fp.input :genetic_results, as: :file, input_html: { multiple: true } %>
-                    <%= fp.input :allergies, as: :file, input_html: { multiple: true } %>
-                  <% end %>
+                  <%= f.input :title %>
+                  <%= f.input :description, as: :text, input_html: {rows: 12} %>
+                </div>
+                <div class="col w-50 medical-attach">
+                  <h2 id="medical-report-anchor" class="title mb-5">Medical Report</h2>
+                    <%= f.simple_fields_for(:patient) do |fp| %>
+                      <%= fp.input :medications, as: :file, input_html: { multiple: true } %>
+                      <%= fp.input :treatments, as: :file, input_html: { multiple: true } %>
+                      <%= fp.input :surgeries, as: :file, input_html: { multiple: true } %>
+                      <%= fp.input :lab_tests, as: :file, input_html: { multiple: true } %>
+                      <%= fp.input :genetic_results, as: :file, input_html: { multiple: true } %>
+                      <%= fp.input :allergies, as: :file, input_html: { multiple: true } %>
+                    <% end %>
+                </div>
               </div>
               <%= f.button :submit, class: "btn-s-blue mb-5" %>
             <% end %>
-        </div>
+
 
         <div>
-          <h4>Associated patient:</h4>
+          <h4 class="sub-title">Associated patient</h4>
           <p>Patient <%= @case.patient.id %></p>
        <!--    < link_to "Edit this patient", edit_patient_path(@case.patient) %> -->
       <!--     <p>Patient medical reports to be listed here</p> -->
-        </div>
       </div>
     </div>
   </div>
