add basic meta structure setting

--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "#{@case.title} is on #{DEFAULT_META["meta_product_name"]}" %>
+<% content_for :meta_description, "Lists all cases available." %>
+
 <div class="small-banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url('<%= cl_image_path "pexels-tima-miroshnichenko-5407212_nwdzks", crop: :fill %>')">
   <div class="container">
     <div>
