--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "#{@project.name} is on #{DEFAULT_META["meta_product_name"]}" %>
+<% content_for :meta_description, "Lists all projects available." %>
+
 <div class="small-banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
                            url('https://res.cloudinary.com/dpt0tj9je/image/upload/v1615221923/pexels-oles-kanebckuu-127873_1_lzg0mx.jpg')">
   <div class="container">
