--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "#{@user.full_name} is on #{DEFAULT_META["meta_product_name"]}" %>
+<% content_for :meta_description, "My profile page includes information related to patients, cases, projects and collaborations." %>
+
 <div id="dashboard-top">
 
   <div class="container">
